# Process this file with autoconf to produce a configure script.
AC_INIT(automake.in)

AC_CONFIG_AUX_DIR(lib)

AM_INIT_AUTOMAKE(automake, 1.5)

ACLOCAL="`pwd`/aclocal --acdir=m4"
# $AUTOMAKE is always run after a `cd $top_srcdir', hence `.' is really
# what we want for perllibdir and libdir.
AUTOMAKE="perllibdir=./lib `pwd`/automake --libdir=lib"

AC_PATH_PROG(PERL, perl)
if test -z "$PERL"; then
   AC_MSG_ERROR([perl not found])
fi
$PERL -e 'require 5.005;' || {
   AC_MSG_ERROR([perl 5.005 or better is required])
}

AC_OUTPUT([Makefile
           lib/Makefile
           lib/Automake/Makefile
	   lib/am/Makefile
           m4/Makefile
           tests/Makefile

           automake aclocal],
          [chmod +x automake aclocal])
