## Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = gnits
MAINT_CHARSET = latin1

m4datadir = $(datadir)/aclocal
dist_m4data_DATA = ccstdc.m4 cond.m4 depend.m4 depout.m4 dmalloc.m4 \
error.m4 header.m4 init.m4 lex.m4 lispdir.m4 maintainer.m4 \
missing.m4 mktime.m4 multi.m4 obstack.m4 protos.m4 ptrdiff.m4 \
regex.m4 sanity.m4 strtod.m4 termios.m4 winsz.m4
