## Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = gnits
MAINT_CHARSET = latin1

m4datadir = $(datadir)/aclocal
m4data_DATA = ccstdc.m4 cond.m4 depend.m4 depout.m4 dmalloc.m4 \
error.m4 gcj.m4 header.m4 init.m4 lex.m4 lispdir.m4 maintainer.m4 \
minuso.m4 missing.m4 multi.m4 obstack.m4 protos.m4 ptrdiff.m4 \
python.m4 regex.m4 sanity.m4 strtod.m4 termios.m4 winsz.m4

EXTRA_DIST = $(m4data_DATA)
